# spicy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.sh  build.sh  vcpkg.json
src/: Component.hpp  Lexer.hpp  Parser.cpp  Parser.hpp  log.hpp  types.hpp
src/components/: Component.hpp  Resistor.hpp  VoltageSource.hpp
tests/: CMakeLists.txt  lexer.test.cpp  parser.test.cpp
tests/netlists/: parser.test.cir
